c2prj1_cards/grade.txt
Grading at Fri Aug 17 06:16:45 UTC 2018
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:58:15: error: multi-character character constant [-Werror=multichar]
     value_let='14';
               ^
cards.c:58:15: error: overflow in implicit constant conversion [-Werror=overflow]
cards.c:61:15: error: multi-character character constant [-Werror=multichar]
     value_let='11';
               ^
cards.c:61:15: error: overflow in implicit constant conversion [-Werror=overflow]
cards.c:64:15: error: multi-character character constant [-Werror=multichar]
     value_let='12';
               ^
cards.c:64:15: error: overflow in implicit constant conversion [-Werror=overflow]
cards.c:67:15: error: multi-character character constant [-Werror=multichar]
     value_let='13';
               ^
cards.c:67:15: error: overflow in implicit constant conversion [-Werror=overflow]
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
